--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,11 @@ pluginManagement {
         maven { url = 'https://maven.minecraftforge.net/' }
         maven { url = 'https://repo.spongepowered.org/maven' }
     }
+    resolutionStrategy {
+        eachPlugin {
+            if (it.requested.id.namespace == 'org.spongepowered') {
+                it.useModule('org.spongepowered:mixingradle:0.7-SNAPSHOT')
+            }
+        }
+    }
 }
