Fixed Cattail placement when BoneMealing
- Replaced an AT
- Added 2 Mixins to BoneMealItem

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,4 +1,4 @@
-# We need to make defaultBlockState and stateDefinition public fields,
+# We need to make registerDefaultState and stateDefinition public,
 # so we can set the default BlockState from within a Mixin.
-public net.minecraft.world.level.block.Block f_49786_ # defaultBlockState
+public net.minecraft.world.level.block.Block m_49959_(Lnet/minecraft/world/level/block/state/BlockState;)V # registerDefaultState
 public net.minecraft.world.level.block.Block f_49792_ # stateDefinition
