Made Lily Pads sink
- Replaced most frog textures with a new improved texture
- Made Lily Pads Sink
- Repalced Cattail Assets
- More Mixin optimizing
- Updated forge

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,4 +1,3 @@
-# We need to make registerDefaultState and stateDefinition public,
-# so we can set the default BlockState from within a Mixin.
-public net.minecraft.world.level.block.Block m_49959_(Lnet/minecraft/world/level/block/state/BlockState;)V # registerDefaultState
-public net.minecraft.world.level.block.Block f_49792_ # stateDefinition
+# We make these methods public in order to call them from SwampVineBlock
+public net.minecraft.world.level.block.VineBlock m_57911_(Lnet/minecraft/world/level/block/state/BlockState;)Z # hasHorizontalConnection
+public net.minecraft.world.level.block.VineBlock m_222650_(Lnet/minecraft/world/level/block/state/BlockState;Lnet/minecraft/world/level/block/state/BlockState;Lnet/minecraft/util/RandomSource;)Lnet/minecraft/world/level/block/state/BlockState; # copyRandomFaces
