--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'maven-publish'
     id 'net.minecraftforge.gradle' version '5.+'
     id 'org.spongepowered.mixin' version '0.7-SNAPSHOT'
+    id 'org.parchmentmc.librarian.forgegradle' version '1.+'
 }
 
 version = '1.19-1.0.0'
@@ -12,7 +13,7 @@ archivesBaseName = 'swampier_swamps'
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 minecraft {
-    mappings channel: 'official', version: '1.19'
+    mappings channel: 'parchment', version: '1.18.2-2022.06.19-1.19'
 
     accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
@@ -56,11 +57,12 @@ mixin {
 // sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
-
+    maven { url "https://www.cursemaven.com" }
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.19-41.0.35'
+    minecraft 'net.minecraftforge:forge:1.19-41.0.38'
+    implementation fg.deobf("curse.maven:spark-361579:3828094")
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 }
 
