More small stuff and Dragonfly Entity
- Added all Frog Variants
- Added Small Lily Pad(s)
- Fixed Big Lily Pad block breaking bug
- Added Dragonflies
- Gave Swamp Vines the ability to grow into water during world generation
- Made system to modify/add Potion Recipes

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,3 +1,6 @@
 # We make these methods public in order to call them from SwampVineBlock
 public net.minecraft.world.level.block.VineBlock m_57911_(Lnet/minecraft/world/level/block/state/BlockState;)Z # hasHorizontalConnection
 public net.minecraft.world.level.block.VineBlock m_222650_(Lnet/minecraft/world/level/block/state/BlockState;Lnet/minecraft/world/level/block/state/BlockState;Lnet/minecraft/util/RandomSource;)Lnet/minecraft/world/level/block/state/BlockState; # copyRandomFaces
+
+# We make the Potion Mixes public so we can alter the Leaping Potion Recipe
+public net.minecraft.world.item.alchemy.PotionBrewing f_43494_ # POTION_MIXES
