--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -4,3 +4,6 @@ public net.minecraft.world.level.block.VineBlock m_222650_(Lnet/minecraft/world/
 
 # We make the Potion Mixes public so we can alter the Leaping Potion Recipe
 public net.minecraft.world.item.alchemy.PotionBrewing f_43494_ # POTION_MIXES
+
+# Used to make some Blocks Flammable
+public net.minecraft.world.level.block.FireBlock m_53444_(Lnet/minecraft/world/level/block/Block;II)V # setFlammable
