More Decaying Kelp Stuff
- I am going to go crazy because of Block Properties.

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -10,3 +10,5 @@ public net.minecraft.world.level.block.FireBlock m_53444_(Lnet/minecraft/world/l
 
 # Need to register Trunk Placer
 public net.minecraft.world.level.levelgen.feature.trunkplacers.TrunkPlacerType <init>(Lcom/mojang/serialization/Codec;)V # TrunkPlacerType
+
+public net.minecraft.world.level.block.state.BlockBehaviour$Properties f_60890_ # isRandomlyTicking
