Initial Curse Release 1.19-1.0.0

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -11,7 +11,7 @@ license="GNU Lesser General Public License v3.0"
     displayURL="https://www.curseforge.com/minecraft/mc-mods/swampier-swamps"
     credits=""
     authors="andrew0030"
-    description='''Swampier Swamps is a Mod that aims to overhaul and improve the Swamp Biome, and some of the features added in the Wild Update'''
+    description='''Swampier Swamps is a Mod that aims to overhaul and improve the Swamp Biome and some of the features added in the Wild Update.'''
 
 [[dependencies.swampier_swamps]]
     modId="forge"
