--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,17 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx3G
-org.gradle.daemon=false
+# Done to increase the memory available to gradle.
+org.gradle.jvmargs=-Xmx1G
+
+# Fabric Properties
+	# check these on https://fabricmc.net/develop
+	minecraft_version=1.19
+	loader_version=0.14.8
+
+# Mod Properties
+	mod_version = 1.19-1.0.0
+	maven_group = com.andrews.swampier_swamps
+	archives_base_name = swampier_swamps
+
+# Dependencies
+	fabric_version=0.55.1+1.19
+	cloth_config_version = 7.0.72
+	mod_menu_version = 4.0.0
