--- a/build.gradle
+++ b/build.gradle
@@ -6,14 +6,14 @@ plugins {
     id 'org.parchmentmc.librarian.forgegradle' version '1.+'
 }
 
-version = '1.19.3-2.0.1'
+version = '1.19.3-2.0.2'
 group = 'com.andrews.swampier_swamps'
 archivesBaseName = 'swampier_swamps'
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 minecraft {
-    mappings channel: 'parchment', version: '1.19.2-2022.11.27-1.19.3'
+    mappings channel: 'parchment', version: '2022.12.18-1.19.3'
 
     accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
@@ -61,7 +61,7 @@ repositories {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.19.3-44.0.37'
+    minecraft 'net.minecraftforge:forge:1.19.3-44.1.7'
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 }
 
