--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
-	minecraft_version=1.19.3
+	minecraft_version=1.19.4
 	loader_version=0.14.18
 
 # Mod Properties
-	mod_version = 1.19.3-2.1.0
+	mod_version = 1.19.4-3.0.0
 	maven_group = com.andrews.swampier_swamps
 	archives_base_name = swampier_swamps
 
 # Dependencies
-	fabric_version=0.76.0+1.19.3
-	cloth_config_version = 9.0.94
-	mod_menu_version = 5.0.2
+	fabric_version=0.76.0+1.19.4
+	cloth_config_version = 10.0.96
+	mod_menu_version = 6.1.0-rc.4
