--- a/src/main/resources/data/swampier_swamps/tags/worldgen/biome/frog_variants/green_frog_biomes.json
+++ b/src/main/resources/data/swampier_swamps/tags/worldgen/biome/frog_variants/green_frog_biomes.json
@@ -16,6 +16,8 @@
     " TEMPERATE (Orange) as the selected Variant."
   ],
   "values": [
-    "minecraft:forest"
+    "minecraft:forest",
+    "minecraft:plains",
+    "minecraft:river"
   ]
 }
