--- a/src/main/resources/data/swampier_swamps/tags/worldgen/biome/frog_variants/light_gray_frog_biomes.json
+++ b/src/main/resources/data/swampier_swamps/tags/worldgen/biome/frog_variants/light_gray_frog_biomes.json
@@ -17,6 +17,7 @@
   ],
   "values": [
     "minecraft:frozen_peaks",
-    "minecraft:frozen_river"
+    "minecraft:frozen_river",
+    "minecraft:jagged_peaks"
   ]
 }
