--- a/src/main/resources/data/swampier_swamps/tags/worldgen/biome/frog_variants/magenta_frog_biomes.json
+++ b/src/main/resources/data/swampier_swamps/tags/worldgen/biome/frog_variants/magenta_frog_biomes.json
@@ -16,6 +16,7 @@
     " TEMPERATE (Orange) as the selected Variant."
   ],
   "values": [
-    "minecraft:mushroom_fields"
+    "minecraft:mushroom_fields",
+    "minecraft:cherry_grove"
   ]
 }
