--- a/src/main/resources/data/swampier_swamps/tags/worldgen/biome/frog_variants/pink_frog_biomes.json
+++ b/src/main/resources/data/swampier_swamps/tags/worldgen/biome/frog_variants/pink_frog_biomes.json
@@ -16,6 +16,7 @@
     " TEMPERATE (Orange) as the selected Variant."
   ],
   "values": [
-    "minecraft:flower_forest"
+    "minecraft:flower_forest",
+    "minecraft:sunflower_plains"
   ]
 }
