--- a/src/main/resources/data/swampier_swamps/tags/worldgen/biome/frog_variants/red_frog_biomes.json
+++ b/src/main/resources/data/swampier_swamps/tags/worldgen/biome/frog_variants/red_frog_biomes.json
@@ -17,6 +17,7 @@
   ],
   "values": [
     "minecraft:jungle",
-    "minecraft:sparse_jungle"
+    "minecraft:sparse_jungle",
+    "minecraft:bamboo_jungle"
   ]
 }
