--- a/src/main/resources/data/swampier_swamps/tags/worldgen/biome/frog_variants/blue_frog_biomes.json
+++ b/src/main/resources/data/swampier_swamps/tags/worldgen/biome/frog_variants/blue_frog_biomes.json
@@ -17,6 +17,8 @@
   ],
   "values": [
     "minecraft:cold_ocean",
-    "minecraft:deep_cold_ocean"
+    "minecraft:deep_cold_ocean",
+    "minecraft:frozen_ocean",
+    "minecraft:deep_frozen_ocean"
   ]
 }
