--- a/src/main/resources/data/swampier_swamps/tags/worldgen/biome/frog_variants/brown_frog_biomes.json
+++ b/src/main/resources/data/swampier_swamps/tags/worldgen/biome/frog_variants/brown_frog_biomes.json
@@ -17,6 +17,8 @@
   ],
   "values": [
     "minecraft:old_growth_pine_taiga",
-    "minecraft:old_growth_spruce_taiga"
+    "minecraft:old_growth_spruce_taiga",
+    "minecraft:taiga",
+    "minecraft:dripstone_caves"
   ]
 }
