--- a/src/main/resources/data/swampier_swamps/tags/worldgen/biome/frog_variants/cyan_frog_biomes.json
+++ b/src/main/resources/data/swampier_swamps/tags/worldgen/biome/frog_variants/cyan_frog_biomes.json
@@ -17,6 +17,8 @@
   ],
   "values": [
     "minecraft:lukewarm_ocean",
-    "minecraft:deep_lukewarm_ocean"
+    "minecraft:deep_lukewarm_ocean",
+    "minecraft:ocean",
+    "minecraft:deep_ocean"
   ]
 }
