--- a/src/main/resources/data/swampier_swamps/tags/worldgen/biome/frog_variants/light_blue_frog_biomes.json
+++ b/src/main/resources/data/swampier_swamps/tags/worldgen/biome/frog_variants/light_blue_frog_biomes.json
@@ -16,6 +16,7 @@
     " TEMPERATE (Orange) as the selected Variant."
   ],
   "values": [
-    "minecraft:warm_ocean"
+    "minecraft:warm_ocean",
+    "minecraft:ice_spikes"
   ]
 }
