--- a/src/main/resources/data/swampier_swamps/tags/worldgen/biome/frog_variants/lime_frog_biomes.json
+++ b/src/main/resources/data/swampier_swamps/tags/worldgen/biome/frog_variants/lime_frog_biomes.json
@@ -16,6 +16,7 @@
     " TEMPERATE (Orange) as the selected Variant."
   ],
   "values": [
-    "minecraft:mangrove_swamp"
+    "minecraft:mangrove_swamp",
+    "minecraft:lush_caves"
   ]
 }
