--- a/src/main/resources/data/swampier_swamps/tags/worldgen/biome/frog_variants/purple_frog_biomes.json
+++ b/src/main/resources/data/swampier_swamps/tags/worldgen/biome/frog_variants/purple_frog_biomes.json
@@ -18,6 +18,8 @@
   "values": [
     "minecraft:the_end",
     "minecraft:end_highlands",
-    "minecraft:end_midlands"
+    "minecraft:end_midlands",
+    "minecraft:small_end_islands",
+    "minecraft:end_barrens"
   ]
 }
