--- a/src/main/resources/data/swampier_swamps/tags/worldgen/biome/frog_variants/white_frog_biomes.json
+++ b/src/main/resources/data/swampier_swamps/tags/worldgen/biome/frog_variants/white_frog_biomes.json
@@ -17,6 +17,9 @@
   ],
   "values": [
     "minecraft:snowy_plains",
-    "minecraft:snowy_taiga"
+    "minecraft:snowy_taiga",
+    "minecraft:grove",
+    "minecraft:snowy_slopes",
+    "minecraft:snowy_beach"
   ]
 }
