--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
-	minecraft_version=1.19.4
-	loader_version=0.14.18
+	minecraft_version=1.20
+	loader_version=0.14.21
 
 # Mod Properties
-	mod_version = 1.19.4-3.0.1
+	mod_version = 1.20-4.0.0
 	maven_group = com.andrews.swampier_swamps
 	archives_base_name = swampier_swamps
 
 # Dependencies
-	fabric_version=0.76.0+1.19.4
-	cloth_config_version = 10.0.96
-	mod_menu_version = 6.1.0-rc.4
+	fabric_version= 0.83.0+1.20
+	cloth_config_version = 11.0.98
+	mod_menu_version = 7.0.1
